add modal function

--- a/style.css
+++ b/style.css
@@ -60,8 +60,21 @@ body {
     max-width: 400px;
     text-align: center;
   }
-  
-  #play-again-button {
+
+  .quit-button {
+    background-color: white;
+    border: none;
+    color: black;
+    padding: 10px 30px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 20px;
+    margin: 4px 2px;
+    cursor: pointer;
+  }
+
+  .play-again-button {
     background-color: #ffc107;
     border: none;
     color: white;
