--- a/style.css
+++ b/style.css
@@ -38,55 +38,81 @@ body {
     cursor: pointer;
   }
 
-  .modal {
-    display: none;
-    position: fixed;
-    z-index: 1;
-    left: 0;
-    top: 0;
-    width: 100%;
-    height: 100%;
-    overflow: auto;
-    background-color: rgba(0,0,0,0.6);
-  }
+.modal {
+  display: none;
+  position: fixed;
+  z-index: 1;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: rgba(0,0,0,0.6);
+}
   
-  .modal-content {
-    background-color: black;
-    color: white;
-    margin: 15% auto;
-    padding: 20px;
-    border: 4mm ridge #888;
-    width: 60%;
-    max-width: 400px;
-    text-align: center;
-  }
+.gm-modal-content {
+  background-color: black;
+  color: white;
+  margin: 15% auto;
+  padding: 20px;
+  border: 4mm ridge #888;
+  width: 60%;
+  max-width: 400px;
+  text-align: center;
+}
 
-  .quit-button {
-    background-color: white;
-    border: none;
-    color: black;
-    padding: 10px 30px;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    font-size: 20px;
-    margin: 4px 2px;
-    cursor: pointer;
-  }
+.quit-button {
+  background-color: white;
+  border: none;
+  color: black;
+  padding: 10px 30px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 20px;
+  margin: 4px 2px;
+  cursor: pointer;
+}
 
-  .play-again-button {
-    background-color: #ffc107;
-    border: none;
-    color: white;
-    padding: 10px 30px;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    font-size: 20px;
-    margin: 4px 2px;
-    cursor: pointer;
-  }
+.play-again-button {
+  background-color: #ffc107;
+  border: none;
+  color: white;
+  padding: 10px 30px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 20px;
+  margin: 4px 2px;
+  cursor: pointer;
+}
 
-  .info-button {
-    cursor: pointer;
-  }
+.info-button {
+  cursor: pointer;
+}
+
+.info-modal {
+  background-color: rgb(0, 0, 0, .9);
+}
+
+.info-modal-content {
+  background-color: #fefefe;
+  margin: 15% auto;
+  padding: 20px;
+  border: 1px solid #888;
+  width: 60%;
+  max-width: 400px;
+}
+
+.close {
+  color: #aaa;
+  font-size: 30px;
+  font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+  color: black;
+  text-decoration: none;
+  cursor: pointer;
+}
