--- a/style.css
+++ b/style.css
@@ -1,6 +1,12 @@
-body {
-    font-family: Arial, Helvetica, sans-serif;
+@font-face {
+  font-family: "classic";
+  src: url("fonts/PixelMplus10-Bold.ttf");
 }
+
+body {
+    font-family: "classic";
+}
+
 
 .btn-oudo {
     background-color: rgb(184, 154, 80)!important;
