--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 @font-face {
   font-family: "classic";
-  src: url("fonts/PixelMplus10-Bold.ttf");
+  src: url("assets/fonts/PixelMplus10-Bold.ttf");
 }
 
 body {
